# Challenges

./: .gitignore  README.md
04/: CMakeLists.txt  Main.cpp  README.md  Words.txt  build.sh  run.bat
04/includes/: MarkovGenerator.hpp
04/sources/: Interface.cpp  MarkovGenerator.cpp
04/src/: CMakeLists.txt  Main.cpp
04/src/includes/: Interface.hpp
04/src/sources/: Interface.cpp
18/: CMakeLists.txt  Main.cpp  README.md  build.sh
18/src/: CMakeLists.txt
44/: Fizzbuzz.s  README.md  build.bat  build.sh  makefile
46/: Main.cpp  Occurrences.txt  README.md  String.txt  build.bat  build.sh
